org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
/* ... */
.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-audio.with-image {
    margin-left: 15%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container>span {
    width:92%;
    height: auto;
    position: relative;
    top: 0;
    bottom: 0;
    display: block;
    align-items: center;
    vertical-align: middle;
}
.mcq-content-container .option-container.horizontal .option-block-container .option-width-50 .option-text-container-mcq .mcq-imagegrid-text{
    width: 70vw;
    max-width: 78%;
    max-height: 90%;
    position: absolute;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
.mcq-content-container .option-container.horizontal .option-block-container .option-width-50 .option-text-container-mcq>span>p{
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.mcq-content-container .option-container.horizontal .option-block:last-child {
    margin-bottom: 0%;
}

.mcq-imagehorizontal-content-container{
    width: 100%;
    height: 100%;
    position: relative;
    top: 0%;
}
.mcq-imagehorizontal-question-container{
    height: 48%;
}
.mcq-imagehorizontal-options{
    margin-top: 0%;
    display: flex;
    flex-wrap: nowrap;
    margin-left: 8%;
    margin-right: 7%;
    /* width: 90%; */
    height: 100%;
    /* justify-content: center; */
    overflow-y: hidden;
}
.mcq2-2-option-imagehorizontal{
    min-width: 21.5%;
    margin: 2px 0px 0px 6px;
    height: 83%;
    background-color: white;
    border-radius: 8px;
}

.imagehorizontal-option-text {
    height: 100%;
    text-align: center;
}

.imagehorizontal-option-text p {
    overflow: hidden;
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    margin: 0;
    font-weight: bold;
}

.mcq-imagehorizontal-option-audio{
    position: absolute;
    z-index: 10;
    height: 10vh;
    text-align: center;
    margin-left: -3%;
    top: -15%;
}
.imagehorizontal-parent{
    overflow: hidden;
    height: 91%;
}
 .bg-graphics-3 {
    position: relative;
    height: 50%;
    background-color: #F9A817;
    top: 3%;
}
.bg-graphics-3 .bg-circle {
    position: fixed;
    width: 60vw;
    height: 106.6662vh;
    border-radius: 50%;
    opacity: 0.15;
    background-color: #ffffff;
}

.opt-selected-imagehorizontal {
    background-color: #7AB4EE;
    border: solid 2px #024F9D;
}

.zoom-image-horizontal{
    position: absolute;
    bottom: -2%;
    right: 0%;
    width: 50%;
    max-width: 35px;
    cursor: pointer;
}

.option-image-zoom-icon  {
    position: absolute;
    bottom: -2%;
    right: 0%;
    width: 50%;
    max-width: 35px;
    cursor: pointer;
}

/* .mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container .option-image-zoom-icon {
    width: 40%;
    top: 47%;
    cursor: pointer;
    left: 60%;
    bottom: -3%;
} */

.mcq-content-container .option-container.vertical .option-block-container .option-block .option-image-container.no-image {
    height: 0;
}

.mcq-content-container .option-container.vertical .option-block-container .option-block .option-image-container.image-only {
    width: 100%;
    height: 100%;
    text-align: center;
}

